# real-time-prediction-system

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
data_ingestion/: Cargo.toml  Dockerfile  kafka.toml
data_ingestion/src/: build.rs  config.rs  error.rs  fetcher.rs  kafka.rs  lib.rs  logger.rs  main.rs
feature_processing/: Cargo.toml  Dockerfile
feature_processing/src/: consumer.rs  feature_producer.rs  main.rs  misc.rs  processor.rs
inference_server/: Cargo.toml  Dockerfile
inference_server/src/: consumer.rs  engine.rs  main.rs  misc.rs  server.rs
model/: MarketRegimeModel.onnx
stock-price-prediction/: model.py  pyproject.toml
