[workspace]
members = ["data_ingestion", "feature_processing", "inference_server"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.95"
arrow = "54.1.0"
bincode = "1.3.3"
bytes = "1.10.0"
chrono = "0.4.39"
config = "0.15.7"
crossbeam = "0.8.4"
csv = "1.3.1"
dotenvy = "0.15.7"
env_logger = "0.11.6"
futures-util = "0.3.31"
log = "0.4.25"
parquet = "54.1.0"
polars = { version = "0.36.2", features = ["lazy", "rolling_window", "pct_change", "diff"] }
prost = "0.13.4"
prost-types = "0.13.4"
rayon = "1.10.0"
rdkafka = "0.37.0"
reqwest = { version="0.12.12", features=["json", "rustls-tls"] }
schema_registry_converter = { version="4.2.0", features=["avro"] }
serde = "1.0.217"
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features=["full"] }
tokio-tungstenite = { version="0.26.1", features = ["native-tls"] }
