[package]
name = "feature_processing"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
bincode = { workspace=true }
bytes = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
crossbeam = { workspace = true }
csv = { workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
parquet = { workspace = true }
polars = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rayon = { workspace = true }
rdkafka = { workspace = true }
reqwest = { workspace = true }
schema_registry_converter = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
parking_lot = "0.12.3"
data_ingestion = { path="../data_ingestion" }

[[bin]]
name="feature_processing"
path="src/main.rs"

[lib]
name="feature_processing"
path="src/lib.rs"