[package]
name = "inference_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
log = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rdkafka = { workspace = true }
polars = { workspace = true }
bincode = { workspace = true }
ndarray = "0.16.1"
onnxruntime = "0.0.14"
feature_processing = { path = "../feature_processing" }
data_ingestion = { path = "../data_ingestion" }
axum = "0.8.1"
parking_lot = "0.12.3"

[[bin]]
name="inference_server"
path="src/main.rs"
