[project]
name = "stock-price-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.2",
    "onnxruntime>=1.20.1",
    "optuna>=4.2.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "skl2onnx>=1.18.0",
    "ta>=0.11.0",
    "yfinance>=0.2.52",
]
